docs: add readme.md

--- a/app.json
+++ b/app.json
@@ -4,10 +4,10 @@
     "slug": "expo-dog-identifier-ts",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/images/icon.png",
+    "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
     "splash": {
-      "image": "./assets/images/splash.png",
+      "image": "./assets/splash.png",
       "resizeMode": "contain",
       "backgroundColor": "#25292e"
     },
